add handling role in jwt token
