# api-gateway/docs/swagger.json
@@ -8,6 +8,11 @@
     "paths": {
         "/users": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get all users",
                 "consumes": [
                     "application/json"
