# api-gateway/internal/presentation/http/server.go
@@ -9,7 +9,6 @@ import (
 
 	"github.com/ciscapello/api-gateway/internal/application/config"
 	"github.com/ciscapello/api-gateway/internal/common/jwtmanager"
-	"github.com/ciscapello/api-gateway/internal/domain/entity/userEntity"
 	defaulthandler "github.com/ciscapello/api-gateway/internal/presentation/handlers/defaultHandler"
 	userhandler "github.com/ciscapello/api-gateway/internal/presentation/handlers/userHandler"
 	"github.com/gorilla/mux"
@@ -38,8 +37,7 @@ func New(cfg *config.Config, handlers *Handlers, logger *zap.Logger) *Server {
 
 	jwtm := jwtmanager.NewJwtManager(cfg, logger)
 
-	guardAdmin := jwtmanager.NewAuthMiddleware(userEntity.Admin, logger, jwtm)
-	jwtMiddleware := jwtmanager.NewAuthMiddleware(userEntity.Regular, logger, jwtm)
+	jwtMiddleware := jwtmanager.NewAuthMiddleware(logger, jwtm)
 
 	router.Use(LoggingMiddleware(logger))
 
@@ -47,7 +45,7 @@ func New(cfg *config.Config, handlers *Handlers, logger *zap.Logger) *Server {
 	router.MethodNotAllowedHandler = http.HandlerFunc(handlers.DefaultHandler.MethodNotAllowedHandler)
 
 	userRouter := router.PathPrefix("/users").Subrouter()
-	ConfigureUserRoutes(userRouter, handlers.UserHandler, guardAdmin.Middleware, jwtMiddleware.Middleware)
+	ConfigureUserRoutes(userRouter, handlers.UserHandler, jwtMiddleware.Middleware)
 
 	router.Handle("", userRouter)
 
@@ -89,10 +87,9 @@ func (s *Server) Stop(ctx context.Context) error {
 
 func ConfigureUserRoutes(subrouter *mux.Router,
 	handlers *userhandler.UserHandler,
-	adminMiddleware mux.MiddlewareFunc,
 	jwtMiddleware mux.MiddlewareFunc) {
 
-	subrouter.HandleFunc("", handlers.GetAllUsers).Methods(http.MethodGet)
+	subrouter.Handle("", jwtMiddleware.Middleware(http.HandlerFunc(handlers.GetAllUsers))).Methods(http.MethodGet)
 	subrouter.Handle("/{id}", jwtMiddleware.Middleware(http.HandlerFunc(handlers.GetUser))).Methods(http.MethodGet)
 	subrouter.Handle("", jwtMiddleware.Middleware(http.HandlerFunc(handlers.UpdateUser))).Methods(http.MethodPut)
 	subrouter.HandleFunc("/auth", handlers.Auth).Methods(http.MethodPost)
